Improvements, fixes, add stock info.
