# Backend/Progress.Domain/Api/Product.cs
@@ -7,6 +7,8 @@ public class Product
   public string Name { get; set; } = string.Empty;
   public string Description { get; set; } = string.Empty;
   public decimal Stock { get; set; }
+  public decimal StockSecondary { get; set; }
+
   public Price Price { get; set; } = new();
   public Dictionary<int, Price> Prices { get; set; } = new Dictionary<int, Price>();
   public string CategoryName { get; set; } = string.Empty;
