# Backend/Progress.Domain/Api/Request/ProductsStockRequest.cs
@@ -1,0 +1,7 @@
+﻿namespace Progress.Domain.Api.Request
+{
+  public class ProductStocksRequest : ApiRequest
+  {
+    public int[] ProductIds { get; set; } = [];
+  }
+}
