# Backend/Progress.Domain/Api/Response/ProductsStockResponse.cs
@@ -1,0 +1,6 @@
+﻿namespace Progress.Domain.Api.Response
+{
+  public class ProductsStockResponse : ApiResult<ProductStock[]>
+  {
+  }
+}
